test/extern/kbrady/extern_string_generic.chpl
extern proc printf(format: c_string, args ...);
printf("%s", "test1\n");
printf("%s", "test2\n");
printf("%s", "test3\n");
printf("%s", "test4\n");
